checkpoint demo example

--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,39 @@
 
 	<dependencies>
 
-		<!--  Only for demo -->
+		<!-- Only for demo -->
 		<dependency>
 			<groupId>com.jfoenix</groupId>
 			<artifactId>jfoenix</artifactId>
 			<version>8.0.4</version>
 		</dependency>
 
-		<!--  used for the library -->
+		<dependency>
+			<groupId>net.jthink</groupId>
+			<artifactId>jaudiotagger</artifactId>
+			<version>2.2.6-PATHRIK</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-core</artifactId>
+			<version>1.4.12.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.5-jre</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.196</version>
+		</dependency>
+
+
+		<!-- used for the library -->
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
